--- a/notebooks/clean_supporting_data.ipynb
+++ b/notebooks/clean_supporting_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,171 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop rows where ctyname is a state\n",
-    "population = population.drop(population[~population.ctyname.str.contains('County')].index).reset_index(drop=True)"
+    "# remove observations where state name is listed as county name\n",
+    "population = population[~population.ctyname.isin(list(us_state_to_abbrev.keys()))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>countyCode</th>\n",
-       "      <th>ctyname</th>\n",
-       "      <th>state_2d</th>\n",
-       "      <th>popestimate2021</th>\n",
-       "      <th>no_hh_2021</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01001</td>\n",
-       "      <td>Autauga County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>59095</td>\n",
-       "      <td>18880.191693</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01003</td>\n",
-       "      <td>Baldwin County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>239294</td>\n",
-       "      <td>76451.757188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01005</td>\n",
-       "      <td>Barbour County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>24964</td>\n",
-       "      <td>7975.718850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01007</td>\n",
-       "      <td>Bibb County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>22477</td>\n",
-       "      <td>7181.150160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01009</td>\n",
-       "      <td>Blount County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>59041</td>\n",
-       "      <td>18862.939297</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3002</th>\n",
-       "      <td>56037</td>\n",
-       "      <td>Sweetwater County</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>41614</td>\n",
-       "      <td>13295.207668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3003</th>\n",
-       "      <td>56039</td>\n",
-       "      <td>Teton County</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>23575</td>\n",
-       "      <td>7531.948882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3004</th>\n",
-       "      <td>56041</td>\n",
-       "      <td>Uinta County</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>20635</td>\n",
-       "      <td>6592.651757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3005</th>\n",
-       "      <td>56043</td>\n",
-       "      <td>Washakie County</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>7705</td>\n",
-       "      <td>2461.661342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3006</th>\n",
-       "      <td>56045</td>\n",
-       "      <td>Weston County</td>\n",
-       "      <td>WY</td>\n",
-       "      <td>6745</td>\n",
-       "      <td>2154.952077</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3007 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     countyCode            ctyname state_2d  popestimate2021    no_hh_2021\n",
-       "0         01001     Autauga County       AL            59095  18880.191693\n",
-       "1         01003     Baldwin County       AL           239294  76451.757188\n",
-       "2         01005     Barbour County       AL            24964   7975.718850\n",
-       "3         01007        Bibb County       AL            22477   7181.150160\n",
-       "4         01009      Blount County       AL            59041  18862.939297\n",
-       "...         ...                ...      ...              ...           ...\n",
-       "3002      56037  Sweetwater County       WY            41614  13295.207668\n",
-       "3003      56039       Teton County       WY            23575   7531.948882\n",
-       "3004      56041       Uinta County       WY            20635   6592.651757\n",
-       "3005      56043    Washakie County       WY             7705   2461.661342\n",
-       "3006      56045      Weston County       WY             6745   2154.952077\n",
-       "\n",
-       "[3007 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# final population\n",
-    "population"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +268,7 @@
        "[3120 rows x 2 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +414,7 @@
        "[3233 rows x 3 columns]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -682,21 +528,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2992 entries, 0 to 2991\n",
+      "RangeIndex: 3118 entries, 0 to 3117\n",
       "Data columns (total 9 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
-      " 0   countyCode            2992 non-null   object \n",
-      " 1   countyName            2992 non-null   object \n",
-      " 2   stateName             2992 non-null   object \n",
-      " 3   pop_2021              2992 non-null   int64  \n",
-      " 4   no_hh_2021            2992 non-null   float64\n",
-      " 5   med_house_price_2021  2992 non-null   object \n",
-      " 6   med_HH_inc_2020       2992 non-null   float64\n",
-      " 7   long                  2992 non-null   float64\n",
-      " 8   lat                   2992 non-null   float64\n",
+      " 0   countyCode            3118 non-null   object \n",
+      " 1   countyName            3118 non-null   object \n",
+      " 2   stateName             3118 non-null   object \n",
+      " 3   pop_2021              3118 non-null   int64  \n",
+      " 4   no_hh_2021            3118 non-null   float64\n",
+      " 5   med_house_price_2021  3118 non-null   object \n",
+      " 6   med_HH_inc_2020       3118 non-null   float64\n",
+      " 7   long                  3118 non-null   float64\n",
+      " 8   lat                   3118 non-null   float64\n",
       "dtypes: float64(4), int64(1), object(4)\n",
-      "memory usage: 210.5+ KB\n"
+      "memory usage: 219.4+ KB\n"
      ]
     }
    ],
@@ -706,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -724,21 +570,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2992 entries, 0 to 2991\n",
+      "RangeIndex: 3118 entries, 0 to 3117\n",
       "Data columns (total 9 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
-      " 0   countyCode            2992 non-null   object \n",
-      " 1   countyName            2992 non-null   object \n",
-      " 2   stateName             2992 non-null   object \n",
-      " 3   pop_2021              2992 non-null   float64\n",
-      " 4   no_hh_2021            2992 non-null   float64\n",
-      " 5   med_house_price_2021  2992 non-null   float64\n",
-      " 6   med_HH_inc_2020       2992 non-null   float64\n",
-      " 7   long                  2992 non-null   float64\n",
-      " 8   lat                   2992 non-null   float64\n",
+      " 0   countyCode            3118 non-null   object \n",
+      " 1   countyName            3118 non-null   object \n",
+      " 2   stateName             3118 non-null   object \n",
+      " 3   pop_2021              3118 non-null   float64\n",
+      " 4   no_hh_2021            3118 non-null   float64\n",
+      " 5   med_house_price_2021  3118 non-null   float64\n",
+      " 6   med_HH_inc_2020       3118 non-null   float64\n",
+      " 7   long                  3118 non-null   float64\n",
+      " 8   lat                   3118 non-null   float64\n",
       "dtypes: float64(6), object(3)\n",
-      "memory usage: 210.5+ KB\n"
+      "memory usage: 219.4+ KB\n"
      ]
     }
    ],
@@ -748,20 +594,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save dataframe as parquet to preserve datatypes\n",
     "county_chars_all.to_parquet('../data/output/county_chars_all.gzip', compression='gzip')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
