fixed some variables

--- a/notebooks/basic_pipeline copy.ipynb
+++ b/notebooks/basic_pipeline copy.ipynb
@@ -184,7 +184,7 @@
    "outputs": [],
    "source": [
     "# run randomized search\n",
-    "rand.fit(X_test, y_test)"
+    "rand.fit(X_train, y_train)"
    ]
   },
   {
