--- a/notebooks/pipeline_xgboost.ipynb
+++ b/notebooks/pipeline_xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4   0.419294                   1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train/test split\n",
+      "----------\n",
+      "Train size: 1,753,413\n",
+      "Test size: 584,472\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Train/test split\\n----------\\nTrain size: {X_train.shape[0]:,.0f}\\nTest size: {X_test.shape[0]:,.0f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +822,7 @@
        "                               predictor='auto', random_state=42, ...))])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +843,7 @@
        "0.7610852187957678"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +855,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('preprocessor',\n",
+       "                 ColumnTransformer(transformers=[('cat',\n",
+       "                                                  OneHotEncoder(handle_unknown='ignore'),\n",
+       "                                                  ['condominiumIndicator',\n",
+       "                                                   'rateMethod', 'state',\n",
+       "                                                   'floodzone_code'])])),\n",
+       "                ('clf',\n",
+       "                 XGBClassifier(base_score=0.5, booster='gbtree', callbacks=None,\n",
+       "                               colsample_bylevel=0.5, colsample_bynode=1,\n",
+       "                               colsample_bytree=0.6, early_stopping_rounds=None,\n",
+       "                               enable_categoric...\n",
+       "                               feature_types=None, gamma=0, gpu_id=-1,\n",
+       "                               grow_policy='depthwise', importance_type=None,\n",
+       "                               interaction_constraints='', learning_rate=0.3,\n",
+       "                               max_bin=256, max_cat_threshold=64,\n",
+       "                               max_cat_to_onehot=4, max_delta_step=0,\n",
+       "                               max_depth=10, max_leaves=0, min_child_weight=1,\n",
+       "                               missing=nan, monotone_constraints='()',\n",
+       "                               n_estimators=250, n_jobs=0, num_parallel_tree=1,\n",
+       "                               predictor='auto', random_state=42, ...))])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +904,7 @@
        "       [136668,   3992]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +938,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weighted F1 score: 0.6685345121247476\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Weighted F1 score:',f1_score(y_test, y_pred, average='weighted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +964,7 @@
      "text": [
       "precision: 57.332%\n",
       "recall: 2.838%\n",
-      "f1: 0.054\n"
+      "f1: 5.408%\n"
      ]
     }
    ],
@@ -901,11 +977,11 @@
     "                        # rejections are actually predicted correctly\n",
     "recall = TP/(TP + FN) # aka TPR, sensitivity; asks what proportion of actual positives was predicted correctly, i.e.\n",
     "                    # what proportion of actual rejections did we correctly predict as rejected.\n",
-    "f1_score = 2 * (precision * recall)/(precision + recall)\n",
+    "f1_score = 2 * ((precision * recall)/(precision + recall))\n",
     "\n",
     "print(f'precision: {precision*100:.3f}%')\n",
     "print(f'recall: {recall*100:.3f}%')\n",
-    "print(f'f1: {f1_score:.3f}')"
+    "print(f'f1: {f1_score*100:.3f}%')"
    ]
   },
   {
