--- a/notebooks/pipeline_xgboost.ipynb
+++ b/notebooks/pipeline_xgboost.ipynb
@@ -835,40 +835,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "precision: 57.332%\n",
-      "recall: 2.838%\n",
-      "f1: 5.408%\n"
+     "ename": "NameError",
+     "evalue": "name 'pipe' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m \n\u001b[1;32m      3\u001b[0m filename \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../models/xgboost_model_full-features-county-zip-encoded.pickle\u001b[39m\u001b[39m'\u001b[39m \u001b[39m# PICK A FILE NAME, SHOULD END IN .pickle\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m pickle\u001b[39m.\u001b[39mdump(pipe, \u001b[39mopen\u001b[39m(filename, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pipe' is not defined"
      ]
     }
    ],
-   "source": [
-    "TP = 3992\n",
-    "FN = 440841\n",
-    "FN = 136668\n",
-    "FP = 2971\n",
-    "precision = TP/(TP + FP) # asks what proportion of positive predictions are actually correct, i.e. what proportion of predicted \n",
-    "                        # rejections are actually predicted correctly\n",
-    "recall = TP/(TP + FN) # aka TPR, sensitivity; asks what proportion of actual positives was predicted correctly, i.e.\n",
-    "                    # what proportion of actual rejections did we correctly predict as rejected.\n",
-    "f1_score = 2 * ((precision * recall)/(precision + recall))\n",
-    "\n",
-    "print(f'precision: {precision*100:.3f}%')\n",
-    "print(f'recall: {recall*100:.3f}%')\n",
-    "print(f'f1: {f1_score*100:.3f}%')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# save trained model\n",
     "import pickle \n",
@@ -2053,7 +2034,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df_rand.to_csv(\"../data/random_search_results.csv\")"
+    "result_df_rand.to_csv(\"../models/random_search_results.csv\")"
    ]
   },
   {
@@ -2132,7 +2113,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7692b80428db47830816200af1dc3bdeb2e802fc4fb8340bca221f8437002843"
+    "hash": "f08e7a81125859d02060c2adea9c0ca82efd7cb5dcb563e60aaa406d52b70e0d"
    }
   }
  },
