--- a/notebooks/maps_csvs.ipynb
+++ b/notebooks/maps_csvs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,55 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def adoption_rate():\n",
-    "    \"\"\"\n",
-    "    Creates DataFrame which has County Names, FIPS, sum of all policies and policy adoption rate (where insurance is voluntarily purchases) by county.\n",
-    "    Args: None\n",
-    "    Output: Returns DataFrame which is outputted as a .csv, which is used for plotting.\n",
-    "    \"\"\"\n",
-    "    avg_tot_vol_ins_pur = pd.read_csv('../bigquery/data/avg_tot_vol_ins_pur.csv', dtype={'countyCode': str})\n",
-    "    households = u.get_demographics([('Housing', 'Households')], name=True, state=True)\n",
-    "    households['county_state'] = [c + ', ' + s if s=='AK' or s=='LA' else c + ' County, ' + s for c, s in zip(households.County, households.State)]\n",
-    "    adopt_rate = avg_tot_vol_ins_pur[['countyCode', 'propertyState', 'year', 'buildingType', 'tot_pol_cnt']]\n",
-    "    adopt_rate = adopt_rate[(adopt_rate.year==2021) & (adopt_rate.buildingType.str.contains('Residential'))].reset_index(drop=True)\n",
-    "    gb_adopt = adopt_rate.groupby('countyCode')['tot_pol_cnt'].sum().reset_index()\n",
-    "    gb_adopt2 = pd.merge(left=gb_adopt,\n",
-    "                         right=households[['CountyFIPS', 'County', 'State', 'county_state','Households']],\n",
-    "                         left_on='countyCode',\n",
-    "                         right_on='CountyFIPS',\n",
-    "                         how='inner'\n",
-    "                        )\n",
-    "    gb_adopt2 = gb_adopt2[['countyCode', 'County', 'State', 'county_state', 'tot_pol_cnt', 'Households']]\n",
-    "    gb_adopt2['adopt_rate'] = round((gb_adopt2['tot_pol_cnt']/gb_adopt2['Households'])*100,1)\n",
-    "    return gb_adopt2.to_csv('../data/adoption_rates.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:28: SettingWithCopyWarning: \n",
+      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[column[1]] = [by_code[fips][column[0]][column[1]] for fips in FipsDF.CountyFIPS]\n",
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:30: SettingWithCopyWarning: \n",
+      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:30: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['County'] =  [by_code[fips]['CountyFull'] for fips in FipsDF.CountyFIPS]\n",
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:32: SettingWithCopyWarning: \n",
+      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:32: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -81,59 +52,46 @@
     }
    ],
    "source": [
-    "adoption_rate()"
+    "# generates csv for the voluntary insurance adoption rates \n",
+    "avg_tot_vol_ins_pur = pd.read_csv('../bigquery/data/avg_tot_vol_ins_pur.csv', dtype={'countyCode': str})\n",
+    "households = u.get_demographics([('Housing', 'Households')], name=True, state=True)\n",
+    "households['county_state'] = [c + ', ' + s if s=='AK' or s=='LA' else c + ' County, ' + s for c, s in zip(households.County, households.State)]\n",
+    "adopt_rate = avg_tot_vol_ins_pur[['countyCode', 'propertyState', 'year', 'buildingType', 'tot_pol_cnt']]\n",
+    "adopt_rate = adopt_rate[(adopt_rate.year==2021) & (adopt_rate.buildingType.str.contains('Residential'))].reset_index(drop=True)\n",
+    "gb_adopt = adopt_rate.groupby('countyCode')['tot_pol_cnt'].sum().reset_index()\n",
+    "gb_adopt2 = pd.merge(left=gb_adopt,\n",
+    "                     right=households[['CountyFIPS', 'County', 'State', 'county_state','Households']],\n",
+    "                     left_on='countyCode',\n",
+    "                     right_on='CountyFIPS',\n",
+    "                     how='inner'\n",
+    "                    )\n",
+    "gb_adopt2 = gb_adopt2[['countyCode', 'County', 'State', 'county_state', 'tot_pol_cnt', 'Households']]\n",
+    "gb_adopt2['adopt_rate'] = round((gb_adopt2['tot_pol_cnt']/gb_adopt2['Households'])*100,1)\n",
+    "gb_adopt2.to_csv('../data/adoption_rates.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def insurance_vol_data_prep():\n",
-    "    \"\"\"\n",
-    "    Creates DataFrame which has County Names, FIPS, insurance rates per policy, median house prices by county.\n",
-    "    Args: None\n",
-    "    Output: Returns DataFrame which can then be used to calculate over-insurance and under-insurance on policies which are voluntarily adopted.\n",
-    "    \"\"\"\n",
-    "    avg_tot_vol_ins_pur = pd.read_csv('../bigquery/data/avg_tot_vol_ins_pur.csv', dtype={'countyCode': str})\n",
-    "    household_value = u.get_demographics([('Housing', 'Median Value of Owner-Occupied Units')], name=True, state=True)\n",
-    "    household_value.columns = household_value.columns.str.replace(' ', '_').str.replace('-', '_')\n",
-    "    household_value['county_state'] = [c + ', ' + s if s=='AK' or s=='LA' else c + ' County, ' + s for c, s in zip(household_value.County, household_value.State)]\n",
-    "    ins_rate_vol = avg_tot_vol_ins_pur[['countyCode', 'propertyState', 'year', 'buildingType', 'sfha_flood_risk', 'bld_ins_per_pol', 'con_ins_per_pol']]\n",
-    "    ins_rate_vol = ins_rate_vol[(ins_rate_vol.year==2021) & (ins_rate_vol.buildingType=='Residential')].reset_index(drop=True)\n",
-    "    gb_ins_rate_vol = ins_rate_vol.groupby(['countyCode', 'sfha_flood_risk'])[['bld_ins_per_pol','con_ins_per_pol']].mean().reset_index()\n",
-    "    gb_ins_rate_vol2 = pd.merge(left=gb_ins_rate_vol,\n",
-    "                                right=household_value[['CountyFIPS', 'County', 'State', 'county_state', 'Median_Value_of_Owner_Occupied_Units']],\n",
-    "                                left_on='countyCode',\n",
-    "                                right_on='CountyFIPS',\n",
-    "                                how='inner'\n",
-    "    )\n",
-    "    return gb_ins_rate_vol2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:28: SettingWithCopyWarning: \n",
+      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:28: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[column[1]] = [by_code[fips][column[0]][column[1]] for fips in FipsDF.CountyFIPS]\n",
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:30: SettingWithCopyWarning: \n",
+      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:30: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['County'] =  [by_code[fips]['CountyFull'] for fips in FipsDF.CountyFIPS]\n",
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:32: SettingWithCopyWarning: \n",
+      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:32: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -143,12 +101,25 @@
     }
    ],
    "source": [
-    "gb_ins_rate_vol2 = insurance_vol_data_prep()"
+    "# generates dataframe with county names, fips, insurance rates per policy, median house prices\n",
+    "avg_tot_vol_ins_pur = pd.read_csv('../bigquery/data/avg_tot_vol_ins_pur.csv', dtype={'countyCode': str})\n",
+    "household_value = u.get_demographics([('Housing', 'Median Value of Owner-Occupied Units')], name=True, state=True)\n",
+    "household_value.columns = household_value.columns.str.replace(' ', '_').str.replace('-', '_')\n",
+    "household_value['county_state'] = [c + ', ' + s if s=='AK' or s=='LA' else c + ' County, ' + s for c, s in zip(household_value.County, household_value.State)]\n",
+    "ins_rate_vol = avg_tot_vol_ins_pur[['countyCode', 'propertyState', 'year', 'buildingType', 'sfha_flood_risk', 'bld_ins_per_pol', 'con_ins_per_pol']]\n",
+    "ins_rate_vol = ins_rate_vol[(ins_rate_vol.year==2021) & (ins_rate_vol.buildingType=='Residential')].reset_index(drop=True)\n",
+    "gb_ins_rate_vol = ins_rate_vol.groupby(['countyCode', 'sfha_flood_risk'])[['bld_ins_per_pol','con_ins_per_pol']].mean().reset_index()\n",
+    "gb_ins_rate_vol2 = pd.merge(left=gb_ins_rate_vol,\n",
+    "                            right=household_value[['CountyFIPS', 'County', 'State', 'county_state', 'Median_Value_of_Owner_Occupied_Units']],\n",
+    "                            left_on='countyCode',\n",
+    "                            right_on='CountyFIPS',\n",
+    "                            how='inner'\n",
+    "                            )  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,11 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# collapsing data by county and saving output to .csv\n",
+    "# collapsing data by county and saving output to csv\n",
     "gb_ins_rate_vol3 = gb_ins_rate_vol2.groupby(['countyCode', 'County', 'State', 'county_state']).agg({\n",
     "    'Median_Value_of_Owner_Occupied_Units': np.median,\n",
     "    'vol_ins_rate': np.mean\n",
@@ -203,53 +174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:28: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[column[1]] = [by_code[fips][column[0]][column[1]] for fips in FipsDF.CountyFIPS]\n",
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:30: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['County'] =  [by_code[fips]['CountyFull'] for fips in FipsDF.CountyFIPS]\n",
-      "/Users/salilpachare/neuefische/florita/notebooks/utils/utils.py:32: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['State'] =  [by_code[fips]['State'] for fips in FipsDF.CountyFIPS]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# append county state string to average and total claims data\n",
+    "# append county_state string to total coverage data\n",
+    "# format total_coverage column\n",
     "fema_counts_total_avg = pd.read_csv('../data/fema_counts_total_avg.csv', dtype={'countyCode': str})\n",
     "households = u.get_demographics([('Housing', 'Households')], name=True, state=True)\n",
     "households['county_state'] = [c + ', ' + s if s=='AK' or s=='LA' else c + ' County, ' + s for c, s in zip(households.County, households.State)]\n",
-    "claims_avg_tot = households.merge(right=fema_counts_total_avg,\n",
-    "                                      left_on='CountyFIPS',\n",
-    "                                      right_on='countyCode', \n",
-    "                                      how='inner')\n",
-    "claims_avg_tot = claims_avg_tot[['countyCode',\n",
-    "                                 'County',\n",
-    "                                 'State', \n",
-    "                                 'county_state', \n",
-    "                                 'total_coverage',\n",
-    "                                 'total_claims', \n",
-    "                                 'mean_total_coverage', \n",
-    "                                 'mean_total_claims'\n",
-    "                                 ]]\n",
-    "claims_avg_tot.to_csv('../data/claims_avg_tot.csv')"
+    "coverage_tot = households.merge(right=fema_counts_total_avg,\n",
+    "                                left_on='CountyFIPS',\n",
+    "                                right_on='countyCode', \n",
+    "                                how='inner'\n",
+    "                                )\n",
+    "coverage_tot = coverage_tot[['countyCode', \n",
+    "                             'County', \n",
+    "                             'State', \n",
+    "                             'county_state', \n",
+    "                             'total_coverage'\n",
+    "                             ]]\n",
+    "coverage_tot['total_coverage'] = coverage_tot['total_coverage'].round(0)\n",
+    "coverage_tot.loc[:, 'total_coverage'] = '$'+ coverage_tot['total_coverage'].map('{:,.0f}'.format)\n",
+    "coverage_tot.to_csv('../data/coverage_tot.csv')\n"
    ]
   },
   {
@@ -262,7 +209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.8 ('.venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -276,12 +223,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08e7a81125859d02060c2adea9c0ca82efd7cb5dcb563e60aaa406d52b70e0d"
+    "hash": "facc6be1714b42c360693395b862d23a247ab117bac31c5af9f595d9420fee7f"
    }
   }
  },
