updated maps csvs, gitignore, readme

--- a/notebooks/maps_csvs.ipynb
+++ b/notebooks/maps_csvs.ipynb
@@ -178,25 +178,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# append county_state string to total coverage data\n",
-    "# format total_coverage column\n",
+    "# append county_state string to total claims data\n",
+    "# format total_claims column\n",
     "fema_counts_total_avg = pd.read_csv('../data/fema_counts_total_avg.csv', dtype={'countyCode': str})\n",
     "households = u.get_demographics([('Housing', 'Households')], name=True, state=True)\n",
     "households['county_state'] = [c + ', ' + s if s=='AK' or s=='LA' else c + ' County, ' + s for c, s in zip(households.County, households.State)]\n",
-    "coverage_tot = households.merge(right=fema_counts_total_avg,\n",
-    "                                left_on='CountyFIPS',\n",
-    "                                right_on='countyCode', \n",
-    "                                how='inner'\n",
-    "                                )\n",
-    "coverage_tot = coverage_tot[['countyCode', \n",
-    "                             'County', \n",
-    "                             'State', \n",
-    "                             'county_state', \n",
-    "                             'total_coverage'\n",
-    "                             ]]\n",
-    "coverage_tot['total_coverage'] = coverage_tot['total_coverage'].round(0)\n",
-    "coverage_tot.loc[:, 'total_coverage'] = '$'+ coverage_tot['total_coverage'].map('{:,.0f}'.format)\n",
-    "coverage_tot.to_csv('../data/coverage_tot.csv')\n"
+    "claims_tot = households.merge(right=fema_counts_total_avg,\n",
+    "                              left_on='CountyFIPS',\n",
+    "                              right_on='countyCode', \n",
+    "                              how='inner'\n",
+    "                              )\n",
+    "claims_tot = claims_tot[['countyCode', \n",
+    "                         'County', \n",
+    "                         'State', \n",
+    "                         'county_state', \n",
+    "                         'total_claims'\n",
+    "                        ]]\n",
+    "claims_tot['total_claims'] = claims_tot['total_claims'].round(0)\n",
+    "claims_tot.loc[:, 'total_coverage'] = '$'+ claims_tot['total_coverage'].map('{:,.0f}'.format)\n",
+    "claims_tot.to_csv('../data/claims_tot.csv')\n"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
