claims total formatted

--- a/notebooks/maps_csvs.ipynb
+++ b/notebooks/maps_csvs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,34 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:28: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df[column[1]] = [by_code[fips][column[0]][column[1]] for fips in FipsDF.CountyFIPS]\n",
-      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:30: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['County'] =  [by_code[fips]['CountyFull'] for fips in FipsDF.CountyFIPS]\n",
-      "c:\\Users\\pacha\\Dropbox\\datascience\\projects\\florita\\notebooks\\utils\\utils.py:32: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['State'] =  [by_code[fips]['State'] for fips in FipsDF.CountyFIPS]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generates dataframe with county names, fips, insurance rates per policy, median house prices\n",
     "avg_tot_vol_ins_pur = pd.read_csv('../bigquery/data/avg_tot_vol_ins_pur.csv', dtype={'countyCode': str})\n",
@@ -119,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,16 +170,8 @@
     "                         'total_claims'\n",
     "                        ]]\n",
     "claims_tot['total_claims'] = claims_tot['total_claims'].round(0)\n",
-    "claims_tot.loc[:, 'total_coverage'] = '$'+ claims_tot['total_coverage'].map('{:,.0f}'.format)\n",
     "claims_tot.to_csv('../data/claims_tot.csv')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
